# linksee

./: .gitmodules  CMakeLists.txt  README.md  README_en.md  package.xml
cmake/: LinkseeMpp.cmake  LinkseeVision.cmake
config/: ekf2.yaml  provider_odom.lua  rplidar_c1.yaml  ydlidar_x3_pro.yaml
launch/: base_control_esos.launch.py  start_odom.launch.py  start_rplidar.launch.py  start_ydlidar.launch.py  voice_cmd.launch.py
linksee_app/: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  package.xml  pyproject.toml
linksee_app/include/linksee_app/: runner.hpp
linksee_app/scripts/: common.py  evaluate.py  run_host.py  setup_env.sh  start_host.sh  start_inference.sh  stop_host.sh  stop_inference.sh
linksee_app/src/cpp/: linksee_device.cpp  main.cpp  runner.cpp
perceptive_grasp/: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml  requirements.txt
perceptive_grasp/cmake/: fetch_third_party.cmake  webrtc_audio_processing.cmake
perceptive_grasp/config/: grasp_pipeline.yaml  yolov8_seg.yaml
perceptive_grasp/docs/: debugging.md  grasp_config.md  grasping_approaches.md  hand_eye_calibration.md  hardware_setup.md  pipeline_state_machine.md  sdk_dependencies.md  voice_control.md
perceptive_grasp/include/: depth_camera.h  grasp_executor.h  grasp_pipeline.h  grasp_planner.h  las2_stereo_camera.h  mobile_base_controller.h  orientation_estimator.h  stereo_camera.h  stereo_geometry.h  target_detector.h  vision_result_adapter.h  voice_aec_processor.h  voice_command_listener.h  voice_command_parser.h
perceptive_grasp/include/mock/: mock_detector.h  mock_executor.h
perceptive_grasp/resources/: linksee.txt
perceptive_grasp/scripts/: asr_node.py  calibrate_hand_eye.py  check_runtime_env.py  generate_charuco_board.py  local_voice_bridge.py  run_perceptive_grasp.py  tts_node.py  visualize_so101.py
perceptive_grasp/src/: depth_camera.cpp  grasp_executor.cpp  grasp_pipeline.cpp  grasp_planner.cpp  las2_stereo_camera.cpp  main.cpp  mobile_base_controller.cpp  orientation_estimator.cpp  stereo_camera.cpp  stereo_geometry.cpp  target_detector.cpp  voice_aec_processor.cpp  voice_command_listener.cpp  voice_command_parser.cpp
perceptive_grasp/src/mock/: mock_detector.cpp  mock_executor.cpp
perceptive_grasp/tests/: mobile_base_alignment_test.cpp  stereo_geometry_test.cpp  test_camera_backend_source.py  test_check_runtime_env.py  test_grasp_depth_source.py  test_gripper_safety_source.py  test_local_voice_bridge.py  test_main_runtime_shutdown.py  test_mobile_base_alignment_source.py  test_pipeline_voice_release_order.py  test_quiet_log_runner.py  voice_aec_processor_test.cpp  voice_command_parser_test.cpp
perceptive_grasp/tools/: debug_execute_safe.cpp  debug_grasp.cpp  debug_ik.cpp  debug_localize.cpp  debug_view.cpp  read_joints.cpp
perceptive_grasp/urdf/: so101.urdf
rtsp_detection/: CMakeLists.txt  README.md  design_ai_rtsp_app.md
rtsp_detection/config/: rtsp_detection.yaml
rtsp_detection/cpp/: http_server.cpp  http_server.h  main.cpp  nv12_draw.h  pipeline.cpp  pipeline.h
rtsp_detection/scripts/: start.sh
rtsp_detection/web/: index.html
rtsp_tracking/: CMakeLists.txt  README.md
rtsp_tracking/config/: rtsp_tracking.yaml
rtsp_tracking/cpp/: http_server.cpp  http_server.h  main.cpp  nv12_draw.h  pipeline.cpp  pipeline.h
rtsp_tracking/web/: index.html
scripts/: asr_node.py  asr_simple.py  odom_remap_node.py  voice_cmd_node.py  voice_dispatcher_node.py
