<?xml version="1.0"?>
<package format="3">
  <name>linksee_native</name>
  <version>0.1.0</version>
  <description>C++ Linksee native application and mlink device wrapper.</description>
  <maintainer email="dev@spacemit.com">Spacemit Robotics</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
