<?xml version="1.0"?>
<package format="3">
  <name>perceptive_grasp</name>
  <version>0.1.0</version>
  <description>Linksee perceptive grasping pipeline with selectable stereo camera backends.</description>
  <maintainer email="dev@spacemit.com">Spacemit Robotics</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>opencv</depend>
  <depend>yaml-cpp</depend>

  <exec_depend>python3</exec_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
